@@ -175,13 +175,13 @@ Don't abort a TLS connection if the server certificate fails validation.
 Use this only if you know the server uses an invalid certificate.
 .SH FILES
 .TP
-.B /var/nullmailer/failed
+.B /var/spool/nullmailer/failed
 The failed message queue.
 .TP
-.B /var/nullmailer/queue
+.B /var/spool/nullmailer/queue
 The outgoing message queue.
 .TP
-.B /var/nullmailer/trigger
+.B /var/spool/nullmailer/trigger
 A trigger file to cause immediate delivery.
 .TP
 .B /usr/local/etc/nullmailer
