@@ -3,12 +3,12 @@
 echo 'Testing that inject queues messages properly.'
 
 echo 'To: nobody' | inject
-test $( ls $tmpdir/var/nullmailer/queue | wc -l ) = 1
-egrep -i '^to: *nobody' $tmpdir/var/nullmailer/queue/* >/dev/null
+test $( ls $tmpdir/var/spool/nullmailer/queue | wc -l ) = 1
+egrep -i '^to: *nobody' $tmpdir/var/spool/nullmailer/queue/* >/dev/null
 
 echo 'Testing that inject honors $NULLMAILER_QUEUE.'
 
-rm -f $tmpdir/var/nullmailer/queue/*
+rm -f $tmpdir/var/spool/nullmailer/queue/*
 NULLMAILER_QUEUE=/bin/cat
 echo 'To: nobody' | inject >/dev/null
-test $( ls $tmpdir/var/nullmailer/queue | wc -l ) = 0
+test $( ls $QUEUEDIR/queue | wc -l ) = 0
